--- a/templates/courses/enrollement.html
+++ b/templates/courses/enrollement.html
@@ -32,7 +32,7 @@
                     </ul>
                     
                     <div class='row justify-content-center'>
-                        <a href="{% url 'proceed' %}" ><img src="{% static 'img/mcbuttond.png' %}" height=44 class='mt-3'></a>
+                        <a href="{% url 'courseProceed' courseDate.id %}" ><img src="{% static 'img/mcbuttond.png' %}" height=44 class='mt-3'></a>
                     </div>
                 </div>
             
