--- a/templates/courses/enrollement.html
+++ b/templates/courses/enrollement.html
@@ -30,15 +30,15 @@
                         <li class="list-group-item">Tutor {{courseDate.teacher.get_full_name}}</li>
                         <li class="list-group-item">{{courseDate.price}} {{courseDate.currency}} Enrollement Fee</li>
                     </ul>
-                    
                     <div class='row justify-content-center'>
-                        <a href="{% url 'courseProceed' courseDate.id %}" ><img src="{% static 'img/mcbuttond.png' %}" height=44 class='mt-3'></a>
+                        {% if soldOut %}
+                            <h2> it's sold out </h2>
+                        {% else %}
+                            <a href="{% url 'courseProceed' courseDate.id %}" ><img src="{% static 'img/mcbuttond.png' %}" height=44 class='mt-3'></a>
+                        {% endif %}
                     </div>
                 </div>
-            
+            </div>
         </div>
     </div>
-{% endblock %}
-
-{% block last_content %}
 {% endblock %}
