--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,9 +60,8 @@ body {
 --------------------------------------------------------------------------- */
 
 
-/* BETA banner.
+/* OVERWRITING Bootstrap stuff.
 --------------------------------------------------------------------------- */
-
 
 
 /* Horizontal line with words in the middle.
