--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -28,8 +28,8 @@
               2eme Ruelle Nazon<br>
               Port au Prince<br>
               Haiti <br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Phone:</strong> +509 48 43 83 40<br>
+              {% comment %} <strong>Email:</strong> madsen@madsendynamics.com<br> {% endcomment %}
             </p>
 
             <div class="social-links">
