--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -13,7 +13,7 @@
                         <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item {% if request.get_full_path == '/courses/' %}active{% endif %}">
-                        <a class="nav-link" href="{% url 'courses_home' %}">Next courses</a>
+                        <a class="nav-link" href="{% url 'courses_home' %}">Workshops</a>
                     </li>
                     
                     <li class="nav-item {% if request.get_full_path == '/about/' %}active{% endif %}">
