--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,17 +1,3 @@
-/* Colors
---------------------------------------------------------------------------- */
-/* Default Boostrap colors: */
-/* https://github.com/twbs/bootstrap/blob/master/dist/css/bootstrap.css#L7 */
-
-/* Add some Bootstrap colors available in SCSS as custom values. */
-/* Usage: var(--my-custom-value); */
-/* See https://developer.mozilla.org/en-US/docs/Web/CSS/--* */
-:root {
-  --gray-700: #495057;
-  --gray-900: #212529;
-}
-
-
 /* Layout.
 --------------------------------------------------------------------------- */
 body {
@@ -40,7 +26,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.4); /*dim the background*/
+  background-color: rgba(0,0,0,0.5); /*dim the background*/
 }
 
 /* Searchbar 
@@ -62,7 +48,13 @@ body {
 
 /* OVERWRITING Bootstrap stuff.
 --------------------------------------------------------------------------- */
-
+.bg-main{
+  background-color: #24292e;
+}
+.btn-main{
+  background-color: #24292e;
+  color: #eee;
+}
 
 /* Horizontal line with words in the middle.
 https://stackoverflow.com/questions/5214127/css-technique-for-a-horizontal-line-with-words-in-the-middle/44647131#44647131
@@ -173,7 +165,7 @@ Usage:
 }
 
 #footer .footer-top {
-  background: #343a40;
+  background: #24292e;
   padding: 60px 0 30px 0;
 }
 
