--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -28,7 +28,7 @@
                                     </div>
                                     <!--end of col-->
                                     <div class="col-auto">
-                                        <button class="btn btn-md btn-dark " type="submit" id='opacity-1'>Search</button>
+                                        <button class="btn btn-md btn-main " type="submit" id='opacity-1'>Search</button>
                                     </div>
                                     <!--end of col-->
                                 </div>
@@ -45,7 +45,7 @@
             <div class='text-center'>
                 <h2 class='font-weigth-bold typed'>Attend at workshop on <span id='typed'></span></h2>
                 <h4 class='text-muted'>Join beautiful mind on beautiful topic</h4>
-                <a href="{% url 'courses_home' %}" class='btn btn-primary btn-lg'>learn more</a>
+                <a href="{% url 'courses_home' %}" class='btn btn-warning btn-lg'>learn more</a>
             </div>
         </div>
     </div>
