--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -1,9 +1,9 @@
 {% load static %}
 <!--Main Navigation-->
 <header>
-    <nav class="navbar shadow navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar shadow navbar-expand-lg navbar-dark bg-main">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'home' %}">ESIH Makerlab</a>
+            <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/Makerlab.png' %}" width="200px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
