--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -8,7 +8,7 @@
         {% load crispy_forms_tags %}
         <div class="container row col-12 pt-4">
             <div class="col-md-7 text-center">
-                <img class="col-12" style="max-height:60vh;" src="{% static 'css_custom/img/undraw_Security_on_ff2u.svg' %}" alt="">
+                <img class="col-12" style="max-height:60vh;" src="{% static 'img/login.svg' %}" alt="">
             </div>
             <form  class="col-md-5  container mt-2 mb-4 p-0" method="post">
                 <div class="col-12 mb-2 text-center  p-1">  
