--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -10,10 +10,10 @@
         {% load crispy_forms_tags %}
         <div class="container row col-12 pt-4">
             <div class="col-md-7 pt-4 text-center">
-                <img class="col-12" style="max-height:70vh;" src="{% static 'css_custom/img/undraw_connected_world_wuay.svg' %}" alt="">
+                <img class="col-12" style="max-height:70vh;" src="{% static 'img/register.svg' %}" alt="">
             </div>
             <form  class="col-md-5  container mt-2 mb-4 p-0 " method="post">
-                <div class="col-12 mb-2 text-center  p-1">  
+                <div class="col-12 mb-2 text-center p-1">  
                     <span class="form-group h3"  style="font-weight: 600;">{% trans "Register" %} </span>
                 </div>
                 <div class="col-12">
