--- a/templates/courses/search_results.html
+++ b/templates/courses/search_results.html
@@ -13,7 +13,7 @@
                 </div>
                 <!--end of col-->
                 <div class="col">
-                    <input required name="q" value="{{q}}" class="form-control form-control-md form-control-borderless " type="search" placeholder="Search topics or keywords">
+                    <input required name="q" value="{{q}}" class="form-control form-control-md form-control-borderless " type="search" placeholder="Search topics or keywords" autocomplete="off">
                 </div>
                 <!--end of col-->
                 <div class="col-auto">
