--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -24,7 +24,7 @@
                                     </div>
                                     <!--end of col-->
                                     <div class="col">
-                                        <input required name='q' class="form-control form-control-md form-control-borderless " type="search" placeholder="Search topics or keywords">
+                                        <input required name='q' class="form-control form-control-md form-control-borderless " type="search" placeholder="Search topics or keywords" autocomplete="off">
                                     </div>
                                     <!--end of col-->
                                     <div class="col-auto">
