--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -2,7 +2,19 @@
 {% load static %}
 {% load i18n %}
 {% block content %}
- <div class='container mt-5 text-center'>
-    
- </div>
+<div class="about_banner">
+    <div class="overlay">
+        <div class="container">
+            <div class="text-white text-center">
+                <h1 class="mt-5 font-weight-bold">ESIH Makerlab</h1>
+                <h3>The best place to do it yourself or with others</h3>
+            </div>
+        </div>
+    </div>
+</div>
+<div>
+    <div class="container">
+        test
+    </div>
+</div>
 {% endblock content %}
