--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,8 +5,8 @@ body {
 }
 
 .main_home {
-  background-image: url('../img/esih1.jpg');
-  background-position: center;
+  background-image: url('../img/maker2.jpg');
+  background-position: bottom;
   background-size: cover;
   min-height: 350px;
   position: relative;
@@ -26,7 +26,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.66); /*dim the background*/
+  background-color: rgba(0,0,0,0.63); /*dim the background*/
 }
 
 /* Searchbar 
