--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -33,17 +33,17 @@
         </div>
         <div class="d-flex flex-row justify-content-around">
             <div class="row mt-5">
-                <div class="col-md-3">
-                    <img src="{% static 'img/3d.svg' %}" alt="" height="100px">
+                <div class="col-md-4">
+                    <img src="{% static 'img/register.svg' %}" alt="" height="100px">
+                    <h2 class="text-center text-white">Learn</h2>
                 </div>
-                <div class="col-md-3">
-                    <img src="{% static 'img/3d.svg' %}" alt="" height="100px">
+                <div class="col-md-4">
+                    <img src="{% static 'img/login.svg' %}" alt="" height="100px">
+                    <h2 class="text-center text-white">Projects</h2>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <img src="{% static 'img/3d.svg' %}" alt="" height="100px">
-                </div>
-                <div class="col-md-3">
-                    <img src="{% static 'img/3d.svg' %}" alt="" height="100px">
+                    <h2 class="text-center text-white">Peoples</h2>
                 </div>
             </div>
         </div>
