--- a/templates/courses/home.html
+++ b/templates/courses/home.html
@@ -14,63 +14,51 @@
 {% block content %}
     {% include 'partials/_subheader.html' with subheader_title='Courses' %}
     <div class='container mt-4'>
-        <div class='row col-12 mt-3 mb-3'>
-            {% if courses %}
-                {% for course in courses %}
-                <div class='col-md-4 col-12'>
-                    
-                    <div class="card shadow">
-                        <img src="{% static 'img/placeholder.svg' %}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">{{course.title}}</h5>
-                            <p class="card-text">{{course.description}}</p>
+    <div class='row col-12 mt-3 mb-3'>
+        {% if courses  %}
+            {% for course in courses %}
+            <div class='col-md-4 col-12 pt-2'>
+                
+                <div class="card shadow">
+                    <img src="{% static 'img/placeholder.svg' %}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">{{course.title}}</h5>
+                        <p class="card-text">{{course.description}}</p>
+                    </div>
+                    <div class='card-body p-0 px-3'>
+                        <button class="btn btn-dark mb-2" type="button" data-toggle="collapse" data-target="#collapse-{{course.id}}" aria-expanded="false" aria-controls="collapse-{{course.id}}">
+                            View Dates
+                        </button>
+                        <div class="collapse mb-2" id="collapse-{{course.id}}">
+                            <div class="card card-body">
+                                {% if course.courseDates.count > 0 %}
+                                    {% for courseDate in course.courseDates.all %}
+                                        <a class='btn btn-primary btn-block' href="{% url 'enroll' courseDate.id %}">{% trans "Enroll for " %}{{courseDate.date}}</a>
+                                    {% endfor %}
+                                {% else %}
+                                    <h3>No Dates For Now...</h3>
+                                {% endif %}
+                            </div>
                         </div>
-                        <div class='card-body p-0 px-3'>
-                            <a class='btn btn-primary btn-block' href='{% url "enroll" %}'>{% trans "Enroll for Monday 12 october" %}</a>
-                            <a class='btn btn-outline-secondary btn-block' href="{% url 'course_detail' %}">{% trans "List next course date" %}</a>
-                        </div>
-                        <div class="card-body">
-                            <div class='row text-muted'>
-                                <div class='col-12'>
-                                    <i class='fa fa-chair'></i>
-                                    10 {% trans "places remaining" %}
-                                </div>
+                        <a class='btn btn-outline-secondary btn-block' href="{% url 'course_detail' course.id %}">{% trans "course info" %}</a>
+                    </div>
+                    <div class="card-body">
+                        <div class='row text-muted'>
+                            <div class='col-12'>
+                                <i class='fa fa-chair'></i>
+                                10 {% trans "places remaining" %}
                             </div>
                         </div>
                     </div>
-                    
                 </div>
-                {% endfor %}
-            {% else %}
-                <div>
-                    <h3 class='text-muted'>Unfortunately, we don't have any classes scheduled. Come back soon ...</h3>
-                </div>
-            {% endif %}
-        </div>
-        <div class="col-12">
-        {% if courses %}
-            {% if courses.has_other_pages %}
-                <ul class="pagination">
-                    {% if courses.has_previous %}
-                    <li class="page-item"><a class="page-link" href="?page={{ courses.previous_page_number }}">&laquo;</a></li>
-                    {% else %}
-                    <li class="page-item disabled"><a class="page-link">&laquo;</a></li>
-                    {% endif %}
-                    {% for i in courses.paginator.page_range %}
-                    {% if courses.number == i %}
-                        <li class="page-item active"><a class="page-link" href="">{{ i }} <span class="sr-only">{% trans "(current)" %}</span></a></li>
-                    {% else %}
-                        <li><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-                    {% endif %}
-                    {% endfor %}
-                    {% if courses.has_next %}
-                    <li class="page-item"><a class="page-link" href="?page={{ courses.next_page_number }}">&raquo;</a></li>
-                    {% else %}
-                    <li class="page-item disabled"><a class="page-link">&raquo;</a></li>
-                    {% endif %}
-                </ul>
-            {% endif %}
+                
+            </div>
+            {% endfor %}
+        {% else %}
+            <div>
+                <h3 class='text-muted'>no result found ...</h3>
+            </div>
         {% endif %}
-        </div>
     </div>
+</div>  
 {% endblock %}
