--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -12,7 +12,7 @@
                 <div class='row justify-content-center text-white'>
                     <div class="col-12 col-md-10 col-lg-8">
                         <h1 class='font-weight-bold'>Explore</h1>
-                        <h2>explore people, projects, space and courses</h2>
+                        <h2>explore projects, space and courses</h2>
                     </div>
                 </div>
 	            <div class="row justify-content-center mt-2">
@@ -45,7 +45,7 @@
             <div class='text-center'>
                 <h2 class='font-weigth-bold typed'>Attend at workshop on <span id='typed'></span></h2>
                 <h4 class='text-muted'>Join beautiful mind on beautiful topic</h4>
-                <a href="{% url 'courses_home' %}" class='btn btn-warning btn-lg'>learn more</a>
+                <a href="{% url 'courses_home' %}" class='btn btn-dark btn-lg' style="border:3px solid #be4b34;">Start Now !</a>
             </div>
         </div>
     </div>
