--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -8,15 +8,17 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <h3>ESIH MakerLab</h3>
-            <p>Home of creativity</p>
+            <p>The MakerSpaces serve as a meeting point where communities 
+                of Makers (creators) connect to work on real and personally
+                meaningful projects
+            </p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Services</a></li>
+              <li><a href="{% url 'home' %}">Home</a></li>
+              <li><a href="{% url 'about' %}">About us</a></li>
               <li><a href="#">Terms of service</a></li>
               <li><a href="#">Privacy policy</a></li>
             </ul>
