--- a/templates/partials/_subheader.html
+++ b/templates/partials/_subheader.html
@@ -1,7 +1,7 @@
 <div class='subheader text-light'>
     <div class='overlay'>
         <div class='container p-2'>
-            <h5 class='font-weight-bold'>{{subheader_title}}.</h5>
+            <h5 class='font-weight-bold'>{{subheader_title}}</h5>
         </div>
     </div>
 </div>
