--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -45,7 +45,7 @@
             <div class='text-center'>
                 <h2 class='font-weigth-bold typed'>Attend at workshop on <span id='typed'></span></h2>
                 <h4 class='text-muted'>Join beautiful mind on beautiful topic</h4>
-                <a href="{% url 'courses_home' %}" class='btn btn-dark btn-lg' style="border:3px solid #be4b34;">Start Now !</a>
+                <a href="{% url 'courses_home' %}" class='btn btn-dark btn-lg'>join us</a>
             </div>
         </div>
     </div>
