--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -8,9 +8,7 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <h3>ESIH MakerLab</h3>
-            <p>The MakerSpaces serve as a meeting point where communities 
-                of Makers (creators) connect to work on real and personally
-                meaningful projects
+            <p>The home of creativity
             </p>
           </div>
 
