ready for release

--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -38,7 +38,7 @@
                         <div class='col-md-4 col-12 mb-3'>
                             
                             <div class="card shadow">
-                                <img src="{% static 'img/placeholder.svg' %}" class="card-img-top" alt="...">
+                                <img src="{% if courseDate.course.photo %}/media/{{courseDate.course.photo}}{% else %}{% static 'img/placeholder.svg' %}{% endif %}" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">{{courseDate.course.title}}</h5>
                                     <p class="card-text">{{courseDate.course.description}}</p>
