--- a/templates/courses/enrollement.html
+++ b/templates/courses/enrollement.html
@@ -31,10 +31,14 @@
                         <li class="list-group-item">{{courseDate.price}} {{courseDate.currency}} Enrollement Fee</li>
                     </ul>
                     <div class='row justify-content-center'>
-                        {% if soldOut %}
-                            <h2> it's sold out </h2>
+                        {% if enrolled %}
+                            <h2> You already enrolled </h2>
                         {% else %}
-                            <a href="{% url 'courseProceed' courseDate.id %}" ><img src="{% static 'img/mcbuttond.png' %}" height=44 class='mt-3'></a>
+                            {% if soldOut %}
+                                <h2> it's sold out </h2>
+                            {% else %}
+                                <a href="{% url 'courseProceed' courseDate.id %}" ><img src="{% static 'img/mcbuttond.png' %}" height=44 class='mt-3'></a>
+                            {% endif %}
                         {% endif %}
                     </div>
                 </div>
