--- a/templates/courses/home.html
+++ b/templates/courses/home.html
@@ -23,30 +23,36 @@
                     <img src="{% if course.photo %}/media/{{course.photo}}{% else %}{% static 'img/placeholder.svg' %}{% endif %}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">{{course.title}}</h5>
-                        <p class="card-text">{{course.description}}</p>
+                        <p class="card-text">{{course.description|truncatewords:20}}</p>
                     </div>
                     <div class='card-body p-0 px-3'>
-                        <button class="btn btn-dark mb-2" type="button" data-toggle="collapse" data-target="#collapse-{{course.id}}" aria-expanded="false" aria-controls="collapse-{{course.id}}">
-                            View Dates
-                        </button>
+                        <div class="col-12 row m-auto">
+                            <button class="btn btn-dark mb-2 col-5 mr-2" type="button" data-toggle="collapse" data-target="#collapse-{{course.id}}" aria-expanded="false" aria-controls="collapse-{{course.id}}">
+                                View Dates
+                            </button>
+                            <a class='btn btn-outline-secondary btn-block col-5 mb-2' href="{% url 'course_detail' course.id %}">{% trans "course info" %}</a>
+                        </div>
                         <div class="collapse mb-2" id="collapse-{{course.id}}">
                             <div class="card card-body">
                                 {% if course.courseDates.count > 0 %}
                                     {% for courseDate in course.courseDates.all %}
-                                        <a class='btn btn-primary btn-block' href="{% url 'enroll' courseDate.id %}">{% trans "Enroll for " %}{{courseDate.date}}</a>
+                                        <div class='row text-muted'>
+                                            <h5>{{courseDate.date}}</h5>
+                                            <div class='col-12 p-0 mb-1'>
+                                                <i class='fa fa-chair'></i>
+                                                {{courseDate.remainPlaces}} {% trans "places remaining" %}
+                                            </div>
+                                            <div class='col-12 p-0 mb-1'>
+                                                <i class='fa fa-money-bill-wave'></i>
+                                                {{courseDate.price}} {{courseDate.currency}}
+                                            </div>
+                                            <a class='btn btn-primary btn-block' href="{% url 'enroll' courseDate.id %}">{% trans "Enroll" %}</a>
+                                        </div>
+                                        <hr>
                                     {% endfor %}
                                 {% else %}
                                     <h3>No Dates For Now...</h3>
                                 {% endif %}
-                            </div>
-                        </div>
-                        <a class='btn btn-outline-secondary btn-block' href="{% url 'course_detail' course.id %}">{% trans "course info" %}</a>
-                    </div>
-                    <div class="card-body">
-                        <div class='row text-muted'>
-                            <div class='col-12'>
-                                <i class='fa fa-chair'></i>
-                                10 {% trans "places remaining" %}
                             </div>
                         </div>
                     </div>
