--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -8,7 +8,9 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <h3>ESIH MakerLab</h3>
-            <p>The home of creativity
+            <h5>The home of creativity</h5>
+            <p>
+            Plateforme numérique permettant de gérer le laboratoire de prototypage rapide (Cours, Membership, Équipements ...)
             </p>
           </div>
 
@@ -25,9 +27,8 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              2eme Ruelle Nazon<br>
-              Port au Prince<br>
-              Haiti <br>
+              2ème Ruelle Nazon<br>
+              Port-au-Prince ,Haiti <br>
               <strong>Phone:</strong> +509 48 43 83 40<br>
               {% comment %} <strong>Email:</strong> madsen@madsendynamics.com<br> {% endcomment %}
             </p>
@@ -63,7 +64,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Makerlab</span></strong>. 2020
+        &copy; Copyright <strong><span>Makerlab</span></strong>. 2021
       </div>
     </div>
   </footer><!-- End Footer -->
